--- a/TheBillboard/Views/Authors/Index.cshtml
+++ b/TheBillboard/Views/Authors/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Author>
+﻿@model IEnumerable<AuthorIndexViewModel>
 
 @{
     ViewData["Title"] = "Lista di Autori";
@@ -13,12 +13,15 @@
             <li class="list-group-item">
                 <div class="card">
                     <div class="d-flex flex-column card-body">
-                        <h5 class="card-title">@author.ToString()</h5>
-                        @Html.ActionLink("Remove", "Delete", new { id = author.Id }, new { @class = "btn btn-sm btn-outline-danger w-25" })
+                        <h5 class="card-title">@author.Author.ToString()</h5>
+                        @if(author.IsDeletable)
+                        {
+                        @Html.ActionLink("Remove", "Delete", new { id = author.Author.Id }, new { @class = "btn btn-sm btn-outline-danger w-25" })                            
+                        }
                     </div>
                 </div>
             </li>
-        }
+        }        
     </ul>
     @Html.ActionLink("Create New Author", "Create", "Authors", default, new { @class = "btn btn-sm btn-outline-danger w-25" })
 
