--- a/TheBillboard/Views/Messages/Index.cshtml
+++ b/TheBillboard/Views/Messages/Index.cshtml
@@ -5,6 +5,8 @@
 }
 
 <div class="text-center">    
+    <h3 class="display-4">Message List</h3>
+
     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newMessageModal" data>New message</button>
     <!-- Start modal -->
     <div class="modal fade" id="newMessageModal" tabindex="-1" aria-labelledby="newMessageModalLabel" aria-hidden="true">
@@ -22,9 +24,8 @@
     </div>
     <!-- End modal -->
 
-    <h3 class="display-4">Message List</h3>
     <ul class="list-group list-group-flush align-items-center">
-        @foreach (var message in Model.Messages)
+        @{await foreach (var message in Model.Messages)
         {
             <li class="list-group-item">
                 <div class="card">
@@ -33,13 +34,14 @@
                         <h6 class="card-subtitle mb-2 text-muted">@message.Author.ToString()</h6>
                         <p class="card-text">@message.Message.Body</p>
                         @Html.ActionLink("Detail", "Detail", new { id = message.Message.Id }, new { @class = "btn btn-sm btn-outline-primary w-25" })
-                        @Html.ActionLink("Edit", "Create", new { id = message.Message.Id }, new { @class = "btn btn-sm btn-outline-danger w-25" })
+                        @Html.ActionLink("Edit", "Create", new { id = message.Message.Id }, new { @class = "btn btn-sm btn-outline-danger w-25" })                        
                     </div>
                     <div class="d-flex flex-column align-items-end card-footer">
                         <small class="text-muted"><strong>Updated at: </strong> @message.Message.FormattedUpdatedAt</small>
                     </div>
                 </div>
             </li>
+        }
         }
     </ul>
 </div>
