--- a/TheBillboard/Views/Shared/MessageCreate.cshtml
+++ b/TheBillboard/Views/Shared/MessageCreate.cshtml
@@ -14,9 +14,10 @@
         <div>
             <label for="Message.AuthorId">Author</label>
             <select asp-for="Message.AuthorId" class="form-select">
-                @foreach (var author in Model.Authors)
+                @{ await foreach (var author in Model.Authors)
                 {
                     <option value="@author.Id">@author.ToString()</option>
+                }
                 }
             </select>
         </div>
@@ -29,4 +30,3 @@
 
     <button type="submit" class="btn btn-sm btn-outline-primary">Send</button>
 </form>
-
