Fit and finish features, Fixed css

--- a/TheBillboard/Views/Messages/Index.cshtml
+++ b/TheBillboard/Views/Messages/Index.cshtml
@@ -7,7 +7,7 @@
 <div class="text-center">    
     <h3 class="display-4">Message List</h3>
 
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newMessageModal" data>New message</button>
+    <button id="createMessageBtn" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newMessageModal" data>New message</button>
     <!-- Start modal -->
     <div class="modal fade" id="newMessageModal" tabindex="-1" aria-labelledby="newMessageModalLabel" aria-hidden="true">
         <div class="modal-dialog">
