--- a/TheBillboard/Views/Shared/MessageCreate.cshtml
+++ b/TheBillboard/Views/Shared/MessageCreate.cshtml
@@ -13,13 +13,22 @@
         </div>
         <div>
             <label for="Message.AuthorId">Author</label>
-            <select asp-for="Message.AuthorId" class="form-select">
-                @{ await foreach (var author in Model.Authors)
-                {
-                    <option value="@author.Id">@author.ToString()</option>
-                }
-                }
-            </select>
+            @if (Model.Message.Id is null)
+            {
+                <select asp-for="Message.AuthorId" class="form-select">
+                    @{
+                        await foreach (var author in Model.Authors)
+                        {
+                            <option value="@author.Id">@author.ToString()</option>
+                        }
+                    }
+                </select>
+            }
+            else
+            {
+                <div class="form-control"><label>@Model.Message.Author!.ToString()</label>   </div>
+                <input asp-for="Message.AuthorId" hidden="true" type="text" class="form-control" value="@Model.Message.AuthorId">
+            }
         </div>
         <div>
             <label for="body">Message</label>
