--- a/TheBillboard/Views/_ViewImports.cshtml
+++ b/TheBillboard/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using TheBillboard
-@using TheBillboard.Models
-@using TheBillboard.ViewModels
+@using TheBillboard.MVC.Models
+@using TheBillboard.MVC.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
