--- a/TheBillboard/Views/Shared/MessageCreate.cshtml
+++ b/TheBillboard/Views/Shared/MessageCreate.cshtml
@@ -16,11 +16,10 @@
             @if (Model.Message.Id is null)
             {
                 <select asp-for="Message.AuthorId" class="form-select">
-                    @{ await foreach (var author in Model.Authors)
+                    @foreach (var author in Model.Authors)
                         {
                             <option value="@author.Id">@author.ToString()</option>
-                        }
-                    }
+                        }                    
                 </select>
             }
             else
